--- a/_config.yml
+++ b/_config.yml
@@ -65,8 +65,8 @@ reCaptcha:
   secret                 :
 atom_feed:
   path                   : # blank (default) uses feed.xml
-search                   : # true, false (default)
-search_full_content      : # true, false (default)
+search                   : true # true, false (default)
+search_full_content      : true # true, false (default)
 search_provider          : # lunr (default), algolia, google
 algolia:
   application_id         : # YOUR_APPLICATION_ID
@@ -294,3 +294,10 @@ defaults:
       related: true
       sidebar:
         nav: "docs"       
+  # _collections
+  - scope:
+      path: ""
+      type: collections
+    values:
+      sidebar:
+        nav: "docs"          
