--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,9 @@ main:
     url: /categories/news-letter/
   - title: "태그"
     url: /tags/
-  - title: "About"
+  - title: "뉴스레터 구독"
+    url: /register/    
+  - title: "연구소 소개"
     url: /about/
   # - title: "Quick-Start Guide"
   #   url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
