--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,7 +18,13 @@ main:
   #   url: /sitemap/
 
 docs:
-  - title: 연구소 소개
+  - title: "연구소 소개"
     url: /about/
-  - title: 뉴스레터 구독
+  - title: "뉴스레터 구독"
     url: /register/
+  - title: "블로그"
+    url: /categories/blog/
+  - title: "뉴스레터"
+    url: /categories/news-letter/
+  - title: "태그"
+    url: /tags/
