--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,8 @@ main:
     url: /categories/blog/
   - title: "뉴스레터"
     url: /categories/news-letter/
+  - title: "카테고리"
+    url: /categories/
   - title: "태그"
     url: /tags/
   # - title: "Quick-Start Guide"
@@ -26,5 +28,7 @@ docs:
     url: /categories/blog/
   - title: "뉴스레터"
     url: /categories/news-letter/
+  - title: "카테고리"
+    url: /categories/
   - title: "태그"
     url: /tags/
